--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "axios": "^1.6.2",
     "core-js": "^3.8.3",
     "element-plus": "^2.4.2",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
